<resources>
    <string name="app_name">Database</string>
    <string name="action_settings">Settings</string>
    <string name="activity_name_employee">Employee</string>

    <string name="button_new">New</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <string name="not_selected">No employee selected</string>
    <string name="hint_fname">enter first name</string>
    <string name="hint_lname">enter last name</string>
    <string name="hint_title">enter job title</string>
    <string name="hint_salary">enter salary</string>

</resources>
