<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scconsulting.database.Database">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="@string/button_new"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/button_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/button_delete"
        app:showAsAction="ifRoom" />

</menu>
