<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scconsulting.databasenew.Employee">

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:textColor="#9900ff"
            android:id="@+id/button"
            android:onClick="doCancel"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save"
            android:textColor="#9900ff"
            android:id="@+id/button2"
            android:onClick="doSave"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:background="#0000ff"
        android:padding="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="#ffffff" >

            <EditText
                style="@android:style/TextAppearance.Large"
                android:id="@+id/editFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_fname"
                android:textColor="#0000ff"
                android:inputType="textCapWords" />

            <EditText
                style="@android:style/TextAppearance.Large"
                android:id="@+id/editLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_lname"
                android:textColor="#0000ff"
                android:inputType="textCapWords" />

            <EditText
                style="@android:style/TextAppearance.Large"
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_title"
                android:textColor="#0000ff"
                android:inputType="textCapWords" />

            <EditText
                style="@android:style/TextAppearance.Large"
                android:id="@+id/editSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_salary"
                android:textColor="#0000ff"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
