<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scconsulting.databasenew.Database">

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_new"
            android:textColor="#9900ff"
            android:id="@+id/button"
            android:onClick="doNew"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_edit"
            android:textColor="#9900ff"
            android:id="@+id/button2"
            android:onClick="doEdit"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete"
            android:textColor="#9900ff"
            android:id="@+id/button3"
            android:onClick="doDelete"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:background="#0000FF"
        android:layout_below="@id/button_bar">

        <ListView android:id="@+id/emplList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:divider="#0000FF"
            android:dividerHeight="1dp"
            android:fadeScrollbars="false" >
        </ListView>

    </LinearLayout>

</RelativeLayout>
